syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.cartobucket.auth.rpc";
option java_outer_classname = "MetadataProto";

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

message Idenifier {
  string system = 1;
  string value = 2;
}

message SchemaValidation {
  string schemaId = 1;
  bool isValid = 2;
  google.protobuf.Timestamp validatedOn = 3;
}

message Metadata {
  repeated Idenifier identifiers = 1;
  repeated SchemaValidation schemaValidations = 2;
  google.protobuf.Struct properties = 3;
  google.protobuf.Timestamp createdOn = 4;
  repeated google.protobuf.Timestamp updateDates = 5;
}